// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/pypi/index getReleases fall back from json and process data from simple endpoint 1`] = `
{
  "registryUrl": "https://custom.pypi.net/foo",
  "releases": [
    {
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.1.2",
    },
    {
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.1.3",
    },
    {
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.1.4",
    },
    {
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.2.0",
    },
    {
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.2.1",
    },
    {
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.2.2",
    },
    {
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.3.0",
    },
    {
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.4.0",
    },
    {
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.4.1",
    },
    {
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.4.2",
    },
    {
      "isDeprecated": true,
      "registryUrl": "https://custom.pypi.net/foo",
      "version": "0.5.0",
    },
  ],
}
`;

exports[`modules/datasource/pypi/index getReleases parses data-requires-python and respects constraints from simple endpoint 1`] = `
{
  "registryUrl": "https://some.registry.org/simple",
  "releases": [
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.1.2",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.1.3",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.1.4",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.2.0",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.2.1",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.2.2",
    },
  ],
}
`;

exports[`modules/datasource/pypi/index getReleases process data from +simple endpoint 1`] = `
{
  "registryUrl": "https://some.registry.org/+simple",
  "releases": [
    {
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.1.2",
    },
    {
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.1.3",
    },
    {
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.1.4",
    },
    {
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.2.0",
    },
    {
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.2.1",
    },
    {
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.2.2",
    },
    {
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.3.0",
    },
    {
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.4.0",
    },
    {
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.4.1",
    },
    {
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.4.2",
    },
    {
      "isDeprecated": true,
      "registryUrl": "https://some.registry.org/+simple",
      "version": "0.5.0",
    },
  ],
}
`;

exports[`modules/datasource/pypi/index getReleases process data from simple endpoint 1`] = `
{
  "registryUrl": "https://some.registry.org/simple",
  "releases": [
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.1.2",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.1.3",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.1.4",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.2.0",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.2.1",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.2.2",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.3.0",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.4.0",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.4.1",
    },
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.4.2",
    },
    {
      "isDeprecated": true,
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.5.0",
    },
  ],
}
`;

exports[`modules/datasource/pypi/index getReleases process data from simple endpoint with hyphens replaced with underscores 1`] = `
{
  "registryUrl": "https://some.registry.org/simple",
  "releases": [
    {
      "registryUrl": "https://some.registry.org/simple",
      "version": "0.0.5",
    },
  ],
}
`;

exports[`modules/datasource/pypi/index getReleases processes real data 1`] = `
{
  "registryUrl": "https://pypi.org/pypi",
  "releases": [
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-04-03T16:55:14.000Z",
      "version": "0.0.1",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-04-17T20:32:30.000Z",
      "version": "0.0.2",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-04-28T21:18:54.000Z",
      "version": "0.0.3",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-05-09T21:36:51.000Z",
      "version": "0.0.4",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-05-30T23:13:49.000Z",
      "version": "0.0.5",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-06-13T22:21:05.000Z",
      "version": "0.0.6",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-06-21T22:12:36.000Z",
      "version": "0.0.7",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-07-07T16:22:26.000Z",
      "version": "0.0.8",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-08-28T20:14:33.000Z",
      "version": "0.0.9",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-09-22T23:47:59.000Z",
      "version": "0.0.10",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-10-24T02:14:07.000Z",
      "version": "0.0.11",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-11-14T18:31:57.000Z",
      "version": "0.0.12",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2017-12-05T18:57:54.000Z",
      "version": "0.0.13",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2018-01-05T21:26:03.000Z",
      "version": "0.0.14",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2018-01-17T18:36:39.000Z",
      "version": "0.1.0",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2018-01-31T18:05:22.000Z",
      "version": "0.1.1",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2018-02-13T18:17:52.000Z",
      "version": "0.1.2",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2018-03-13T17:08:20.000Z",
      "version": "0.1.3",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2018-03-27T17:55:25.000Z",
      "version": "0.1.4",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2018-04-10T17:25:47.000Z",
      "version": "0.1.5",
    },
    {
      "isDeprecated": true,
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2018-05-07T17:59:09.000Z",
      "version": "0.1.6",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "releaseTimestamp": "2018-05-22T17:25:23.000Z",
      "version": "0.1.7",
    },
  ],
  "sourceUrl": "https://github.com/Azure/azure-cli",
}
`;

exports[`modules/datasource/pypi/index getReleases respects constraints 1`] = `
{
  "registryUrl": "https://pypi.org/pypi",
  "releases": [
    {
      "registryUrl": "https://pypi.org/pypi",
      "version": "0.4.1",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "version": "0.30.3",
    },
    {
      "registryUrl": "https://pypi.org/pypi",
      "version": "0.31.0",
    },
  ],
}
`;

exports[`modules/datasource/pypi/index uses https://pypi.org/pypi/ instead of https://pypi.org/simple/ 1`] = `
{
  "registryUrl": "https://pypi.org/simple",
  "releases": [
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-04-03T16:55:14.000Z",
      "version": "0.0.1",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-04-17T20:32:30.000Z",
      "version": "0.0.2",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-04-28T21:18:54.000Z",
      "version": "0.0.3",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-05-09T21:36:51.000Z",
      "version": "0.0.4",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-05-30T23:13:49.000Z",
      "version": "0.0.5",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-06-13T22:21:05.000Z",
      "version": "0.0.6",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-06-21T22:12:36.000Z",
      "version": "0.0.7",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-07-07T16:22:26.000Z",
      "version": "0.0.8",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-08-28T20:14:33.000Z",
      "version": "0.0.9",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-09-22T23:47:59.000Z",
      "version": "0.0.10",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-10-24T02:14:07.000Z",
      "version": "0.0.11",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-11-14T18:31:57.000Z",
      "version": "0.0.12",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2017-12-05T18:57:54.000Z",
      "version": "0.0.13",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2018-01-05T21:26:03.000Z",
      "version": "0.0.14",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2018-01-17T18:36:39.000Z",
      "version": "0.1.0",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2018-01-31T18:05:22.000Z",
      "version": "0.1.1",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2018-02-13T18:17:52.000Z",
      "version": "0.1.2",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2018-03-13T17:08:20.000Z",
      "version": "0.1.3",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2018-03-27T17:55:25.000Z",
      "version": "0.1.4",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2018-04-10T17:25:47.000Z",
      "version": "0.1.5",
    },
    {
      "isDeprecated": true,
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2018-05-07T17:59:09.000Z",
      "version": "0.1.6",
    },
    {
      "registryUrl": "https://pypi.org/simple",
      "releaseTimestamp": "2018-05-22T17:25:23.000Z",
      "version": "0.1.7",
    },
  ],
  "sourceUrl": "https://github.com/Azure/azure-cli",
}
`;
